Remove borders from left and right columns, add min-width to ensure visibility

--- a/static/style.css
+++ b/static/style.css
@@ -357,8 +357,8 @@ body {
     margin-top: 6px;
     padding-bottom: 6px;
     background-color: #FFFFFF;
-    border: 1px solid #D1D9E0;
     border-radius: 6px;
+    min-width: 450px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 13px;
     line-height: normal;
